--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content=“Cynthia Ortiz” />
-   <script src="Ejerc4.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+   
     <title>Practico 2 - JS</title>
 </head>
 <body>
     
+<script src="Ejerc10.js"></script>  
 </body>
 </html>
